--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "id": "3b17958d",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "id": "2ae1fc98",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "id": "343241af",
    "metadata": {},
    "outputs": [
@@ -332,17 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "56f92f4a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23363604d40>"
+       "<matplotlib.legend.Legend at 0x1e2e1e4dd30>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2b4f709d",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "31004813",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
     "challenge_submission = pd.read_csv(\"GROUPID_NICKNAME.csv\")\n",
     "time_series_cols = [c for c in challenge_submission.columns if c not in ['Latitude (N)', 'Longitude (E)']]\n",
     "challenge_submission.loc[:, time_series_cols] = predicted_series.values\n",
-    "challenge_submission.to_csv(\"17_Test123.csv\")"
+    "challenge_submission.to_csv(\"17_Test123.csv\", index=False)"
    ]
   }
  ],
